@@ -579,7 +579,7 @@ OP_LoginComplete=0x0000
 
 # discovered opcodes not yet used:
 OP_PickLockSuccess=0x0000
-OP_PlayMP3=0x0000
+OP_PlayMP3=0x277c
 OP_ReclaimCrystals=0x0000
 OP_DynamicWall=0x0000
 OP_OpenDiscordMerchant=0x0000
