@@ -498,7 +498,7 @@ OP_ItemVerifyRequest=0x0000		#Trevius 03/15/09
 OP_ItemVerifyReply=0x0000		#Trevius 03/15/09
 
 #discovered opcodes not yet used:
-OP_PlayMP3=0x0000
+OP_PlayMP3=0x26ab
 OP_FriendsWho=0x48fe
 OP_MoveLogRequest=0x7510		#gone I think
 OP_MoveLogDisregard=0x0000		#gone I think
