@@ -2,7 +2,11 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 == 12/24/2013 ==
 Secrets (Akkadius): Perl $client->SilentMessage("Message"); addition, this is a pre-req for a Perl plugin I've shared with EQEmu. This function essentially mimics a player speaking with an NPC - which is used in popup window responses 
-
+Secrets: Added functionality to Perl for $client->PlayMP3("name of file"). 
+  Usage varies, but typically you can place an MP3/WAV/XMI in the EQDir//sounds, pfs, s3d, or root client folder and it will play through this Perl function. Example, $client->PlayMP3("combattheme1.mp3") or $client->PlayMP3("TUTBTrade1.mp3")
+  All clients except Secrets of Faydwer and 6.2 have their opcodes identified for this function. The struct + supported params is the same throughout versions. 
+  Use $client->PlayMP3 with an invalid sound file to stop playback or simply wait for it to end.
+  
 == 12/16/2013 ==
 Kayen: Implemented SE_ArcheryDoubleAttack (Chance to do an extra archery attack)
 Kayen: Implemented SE_ShieldEquipDmgMod (Increase damage in primary hand if shield equiped)
